Fixed inconsistent spacing in location chunk editor

--- a/src/css/boom/location-editor.less
+++ b/src/css/boom/location-editor.less
@@ -1,10 +1,12 @@
 #b-location-editor {
+	padding: 0.75rem;
+
 	> * {
 		display: inline-block;
 		float: left;
 		width: 50%;
 		box-sizing: border-box;
-		padding: 1em;
+		padding: 0.7rem;
 	}
 
 	a {
